# AutomatedTraderMCP

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_config.py  test_mcp_server.py
config/: config.local.yaml.example  default_config.yaml  trading_limits.yaml
docs/: MCP_TOOLS_GUIDE.md
logs/: paper_trading_results.json  trade_log.csv
scripts/: setup.bat  setup.sh
src/trader/api/: auth.py  client.py  exceptions.py  models.py  rate_limiter.py
src/trader/backtesting/: engine.py
src/trader/cli/: __init__.py  main.py
src/trader/core/: config.py  logging_config.py
src/trader/data/: news_fetcher.py
src/trader/gtt/: executor.py  monitor.py  storage.py
src/trader/mcp/: server.py
src/trader/mcp/tools/: __init__.py  gtt.py  market_data.py  orders.py  portfolio.py
src/trader/risk/: kill_switch.py  manager.py
src/trader/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py
tests/test_api/: test_client.py
tests/test_backtesting/: test_engine.py
tests/test_data/: test_news_fetcher.py
tests/test_gtt/: test_executor.py  test_monitor.py  test_storage.py
tests/test_integration/: test_system.py
tests/test_risk/: test_kill_switch.py  test_manager.py
